# handlr-regex

./: Cargo.toml  README.md  build.rs  flake.nix
src/: cli.rs  error.rs  logging.rs  main.rs  testing.rs
src/apps/: system.rs  user.rs
src/apps/snapshots/: handlr__apps__user__tests__add_handlers_expand_wildcards.snap  handlr__apps__user__tests__remove_handlers_expand_wildcards.snap  handlr__apps__user__tests__set_handlers_expand_wildcards.snap  handlr__apps__user__tests__unset_handlers_expand_wildcards.snap
src/common/: desktop_entry.rs  handler.rs  mime_types.rs  mod.rs  path.rs
src/common/snapshots/: handlr__common__path__tests__mime_table_json-2.snap  handlr__common__path__tests__mime_table_piped.snap  handlr__common__path__tests__mime_table_terminal.snap
src/config/: config_file.rs  main_config.rs
src/config/snapshots/: handlr__config__main_config__tests__add_and_remove_handlers.snap  handlr__config__main_config__tests__add_and_unset_handlers.snap  handlr__config__main_config__tests__dont_override_selector.snap  handlr__config__main_config__tests__override_selector.snap  handlr__config__main_config__tests__show_handler.snap  (+14 more)
src/snapshots/: handlr__cli__tests__autocomplete_mimes.snap
tests/: terminal_override.rs
tests/assets/: mimeapps_no_added.list  nonsense_binary_data
tests/snapshots/: terminal_override__terminal_output_false.snap  terminal_override__terminal_output_tests_direct-2.snap  terminal_override__terminal_output_tests_force_false.snap  terminal_override__terminal_output_tests_force_true.snap
xtask/: Cargo.toml
xtask/src/: main.rs
