[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlr-regex = { path = "../handlr-regex" }
clap = { version = "3.1.9", features = ["derive"] }
clap_mangen = "0.1"
clap_complete = "3.1.2"
regex = "1"
devx-cmd = { version = "0.5" }
